2014-01-16  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Added in simple HTTP response for HW 1.

2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.
 * Added a return for an HTTP 1.0 response
 * Added a return for a 'Content-type' of text/html
 * Added html templates inherited from a base.html
 * Refactored for wsgi

 * HW 8
 * Added command line support
 * Added twill testing
 * Added support for .jpg and .tiff for Project
 * Modified root directory to accept .tiff and .jpeg

 * HW 9
 * Integrated quotes app
 * Integrated chat app
 * Project: Add a URL that provides a list of images, resized to thumbnails:-
                 Added a link on the index page to see a list of images that
				 were uploaded (most recent being first)

* HW 10
* Projects 8 and 15 implemented
* Project 8 minimally implemented
* Users may comment on the "most recent image" page
* Comments are global for all pictures
* Functionality implemented using quixote and basic html
* Project 15 fully implemented
* Users can login, logout and create an account
* Only one active account at a time and no identical accounts
* Test user of Username Ari password Liverpool
	
* HW 11
* Cookie app functionality implemented
* All data made persistent and scoring feature implement for images
* Images can be upvoted/downvoted
* Comments and scores are now persistent
* All images persistent as well