@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class ="contentText">
 <h1> Account Creation Page: </h1><br>
 {{ message }}<br><br>
 
@@ -9,5 +10,6 @@
     <p>password: <input type='text' name='password'></p>
     <p><input type='submit' value='Submit'>
 </form></p>
-
+<a href="/">Return to Home Page</a>
+</div>
 {% endblock %}
