@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="contentTitle">
+    <a href="/">Return to Home Page</a><br>
 <h2>Here are all of the images that have been uploaded!</h2>
 (most recently uploaded first)
 <div id="imageContainer">
